# my_chat_bot

./: .gitignore  README.md  chat.py  docker-compose.yml  pyproject.toml  requirements.txt  start_api.sh
api/: app.py  health.py
api/routes/: chat.py
config/: logging.yaml  logging.yml  settings.yaml  settings.yml
core/: schema.py  settings_loader.py  setup_logging.py
embedding/: batch_embed_texts.py  embed_texts.py
frontend/: CLAUDE.md  README.md  global.d.ts  package-lock.json  package.json
frontend/app/: layout.tsx
frontend/components/: ChatInterface.tsx
frontend/lib/: api.ts
ingestion/: load_data.py  pipeline.py
ingestion/chunking/: architectureTypes.py  companyInfo.py  heroSlides.py  interiorStyles.py  news.py  newsCategories.py  projectCategories.py  projects.py
llm/: generator.py  prompt.py
retrieval/: retriever.py
