[project]
name = "chat-bot"
version = "0.1.0"
requires-python = ">=3.10"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

ignore = [
    "E501",
    "B008",
]

[tool.ruff.lint.per-file-ignores]
"notebooks/*.py" = ["E402", "F401", "F841"]
"experiments/*.py" = ["E402", "F401", "F841"]
"tests/*.py" = ["S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[dependency-groups]
dev = [
    "ruff>=0.15.20",
]
